--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
     align-items: center;
 }
 
+
 .background{
     position: absolute;
     top: 0;
@@ -94,6 +95,11 @@ margin-top: 75px;
     margin-bottom: 10px;
 }
 
+.stat__number--limit{
+    color: red;
+}
+
+
 .second-heading{ 
     font-size: 14px;
     text-transform: uppercase;
@@ -140,6 +146,8 @@ margin-top: 75px;
         flex-direction: column;
         align-items: center;
     }
+
+   
 
 
 }
